# perseus

./: indent_test_output.py  readme.md  test.bat
code/: CMakeLists.txt  Doxyfile.in
code/debug/: grammar_crash.cpp
code/executable/: run.cpp
code/executable/print/: main.cpp  print_ast.hpp  print_ast.inl  print_clean_ast.hpp  print_parser_ast.hpp
code/include/compiler/: ast.hpp  ast_adapted.hpp  ast_common.inl  ast_common_fwd.inl  compile.hpp  compiler.hpp  conversions.hpp  exceptions.hpp  function_manager.hpp  grammar.hpp  iterators.hpp  steps.hpp  token_definitions.hpp  token_ids.hpp  tokens.hpp  types.hpp
code/include/shared/: documentation.hpp  opcodes.hpp  optional_apply.hpp
code/include/vm/: code_segment.hpp  coroutine.hpp  coroutine_manager.hpp  exceptions.hpp  instruction_pointer.hpp  processor.hpp  stack.hpp
code/lib/utf8/: checked.h
code/src/compiler/: compile.cpp  compiler.cpp  conversions.cpp  function_manager.cpp  grammar.cpp  iterators.cpp  token_definitions.cpp  token_ids.cpp  types.cpp
code/src/compiler/steps/: clean_parser_ast.cpp  extract_functions.cpp  generate_code.cpp  simplify_and_annotate.cpp
code/src/executable/: perseus_print.cpp
code/src/shared/: opcodes.cpp
code/src/vm/: code_segment.cpp  coroutine.cpp  coroutine_manager.cpp  instruction_pointer.cpp  processor.cpp  stack.cpp
code/test/: cpp.cpp  execution.cpp  instruction_pointer.cpp  opcode_encoding.cpp  stack.cpp  test_init.cpp  u32string_ostream.hpp  write_code_segment.hpp
code/test/compiler/: function_manager.cpp  iterators.cpp  lexer.cpp  literals.cpp  parser.cpp  temp.cpp
code/test/execution/: arithmetic.cpp  basic.cpp  coroutines.cpp  jump_call.cpp  load_store.cpp  stack.cpp
design/: dependencies.dot  function_api.md  language.md  open questions.md  others opinions.md  schedule.md  tools.md  vm.md
scripts/: arithmetic.per  call.per  call_parameters.per  fib.per  greatest_common_divisor.per  hello.per  invalid_impure.per  just_if.per  thesis_example.per
specification/: vm.md
specification/mockups/coroutines/: c++_style.per  script.per
specification/mockups/simple/: arithmetic_and_functions.per
thesis/: .gitignore  howto.tex  notes.md  outline.md  thesis.bib  thesis_main.tex
thesis/chapter/: bibliography.tex  introduction.tex  outline.tex  realization.tex  theory.tex
thesis/figures/: compiler_steps.dot  re_alternative.dot  re_char.dot  re_epsilon.dot  re_example.dot  re_example_dfa.dot  re_kleene.dot  re_sequence.dot  vm_classes.zargo
thesis/listings/: code_segment_push.cpp  grammar_expression.cpp  grammar_sequence_alternative.cpp  grammar_token.cpp  opcode.cpp  tokens.cpp  visitor.cpp  vm.cpp
thesis/template/: footer.tex  header.tex  title.tex
